Update HTML and CSS

--- a/assets/css/root.css
+++ b/assets/css/root.css
@@ -4,5 +4,6 @@
     --light-gray: #cccccc;
     --dark-gray: #252525;
     --active-color: #29ff00;
+    --hover-color: #555555;
     --enphasis-color: #29ff00;
 }
